UserRole implementation taken into use.

--- a/src/main/resources/geowrench/messages_en.properties
+++ b/src/main/resources/geowrench/messages_en.properties
@@ -19,6 +19,10 @@ change_pwd = Change password
 old_pwd = Current password
 new_pwd = New password
 confirm_new_pwd = Confirm new password
+user_role = Role
+enum.userrole.VISITOR = Visitor
+enum.userrole.MEMBER = Member
+enum.userrole.ADMIN = Admin
 
 
  
