--- a/src/main/resources/geowrench/messages_fi.properties
+++ b/src/main/resources/geowrench/messages_fi.properties
@@ -19,4 +19,7 @@ change_pwd = Vaihda salasana
 old_pwd = Nykyinen salasana
 new_pwd = Uusi salasana
 confirm_new_pwd = Vahvista uusi salasana
-
+user_role = Rooli
+enum.userrole.VISITOR = Vierailija
+enum.userrole.MEMBER = J\u00e4sen
+enum.userrole.ADMIN = P\u00e4\u00e4k\u00e4ytt\u00e4j\u00e4
